--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,8 +16,7 @@
     "@tabler/icons-react": "^2.40.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.18.0",
-    "@petz/utils": "*"
+    "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
